[package]
name = "public-ip"
version = "0.1.1"
authors = ["avitex <avitex@wfxlabs.com>"]
edition = "2018"
description = "Find the public IP address of a device"
documentation = "https://docs.rs/public-ip"
homepage = "https://github.com/avitex/rust-public-ip"
repository = "https://github.com/avitex/rust-public-ip"
license = "MIT"

[features]
default = ["tokio-dns-resolver", "tokio-http-resolver"]
dns-resolver = ["trust-dns-proto"]
http-resolver = ["http", "hyper"]
tokio-dns-resolver = ["dns-resolver", "tokio", "trust-dns-client", "trust-dns-proto/tokio-runtime"]
tokio-http-resolver = ["http-resolver", "tokio", "hyper/runtime"]

[dependencies]
thiserror = "1"
pin-project-lite = "0.2"
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }

trust-dns-client = { version = "0.20", optional = true }
trust-dns-proto = { version = "0.20", optional = true, default-features = false }
hyper = { version = "0.14", features = ["client", "http1"], optional = true }
http = { version = "0.2", optional = true }
tokio = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "~1", features = ["macros"] }
