[package]
name = "public-ip"
version = "0.2.2"
authors = ["avitex <avitex@wfxlabs.com>"]
edition = "2024"
rust-version = "1.85.0"
description = "Find the public IP address of a device"
documentation = "https://docs.rs/public-ip"
homepage = "https://github.com/avitex/rust-public-ip"
repository = "https://github.com/avitex/rust-public-ip"
license = "MIT"
categories = ["network-programming"]
include = ["src/**/*", "examples/**/*", "README.md", "LICENSE", "Cargo.toml"]
keywords = ["public", "external", "ip", "async"]

[features]
default = ["all-providers", "tokio-dns-resolver", "tokio-http-resolver", "https-openssl"]
dns-resolver = ["hickory-proto"]
http-resolver = ["http", "hyper", "hyper-system-resolver", "dns-lookup"]
tokio-dns-resolver = ["dns-resolver", "tokio", "hickory-client", "hickory-proto/tokio"]
tokio-http-resolver = ["http-resolver", "tokio", "hyper/runtime"]

https-openssl = ["hyper-openssl", "openssl", "tower-layer"]
https-rustls-webpki = ["hyper-rustls/webpki-roots"]
https-rustls-native = ["hyper-rustls/rustls-native-certs"]

all-providers = ["google", "opendns", "ipify-org", "my-ip-io", "myip-com", "seeip-org"]

google = []
opendns = []
myip-com = []
my-ip-io = []
seeip-org = []
ipify-org = []

[dependencies]
thiserror = "2"
tracing = "0.1"
tracing-futures = { version = "0.2", features = ["futures-03"] }
pin-project-lite = "0.2"
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }

tokio = { version = "1", optional = true }
tower-layer = { version = "0.3", optional = true }

# DNS Resolver
hickory-client = { version = "0.25", optional = true }
hickory-proto = { version = "0.25", optional = true, default-features = false }

# HTTP Resolver
http = { version = "0.2", optional = true }
dns-lookup = { version = "1", optional = true }
hyper = { version = "0.14", features = ["client", "http1"], optional = true }
hyper-system-resolver = { version = "0.5", default-features = false, optional = true }
hyper-openssl = { version = "0.9", optional = true }
hyper-rustls = { version = "0.23", features = ["rustls-native-certs"], optional = true }
openssl = { version = "0.10", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
